# infinite-backgrounds

./: CMakeLists.txt  LICENSE  main.cpp
include/: RepeatingRow.h  Row.h  StepFigure.h
src/: RepeatingRow.cpp  Row.cpp  StepFigure.cpp  main.cpp
